DS-2300 by maikelkoopman: add conditions for page CT, provide title attribute for visibility icon, fix bug in dropdown notifications mobile

--- a/themes/socialbase/components/asset-builds/css/dropdowns.css
+++ b/themes/socialbase/components/asset-builds/css/dropdowns.css
@@ -235,7 +235,7 @@
 }
 
 .scrollable-menu {
-  height: calc(100vh - 114px);
+  height: calc(100vh - 148px);
   overflow-x: hidden;
   list-style-type: none;
   padding: 0;
