--- a/themes/socialbase/components/asset-builds/css/meta.css
+++ b/themes/socialbase/components/asset-builds/css/meta.css
@@ -9,7 +9,7 @@
   line-height: 1.4;
 }
 
-.metainfo .metainfo__follow {
+.metainfo__follow {
   margin-top: 0.5em;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
@@ -97,7 +97,7 @@
 
 @media screen and (min-width: 768px) {
 
-  .metainfo .metainfo__follow {
+  .metainfo__follow {
     -ms-flex-preferred-size: auto;
     flex-basis: auto;
     margin-top: 0;
